    in an SQLite database
  * Amagalite::Requires::Bootstrap extension module enabling low level boot
    strapping of the pure ruby Amalgalite code from an sqlite database

* Minor Enhancements
  * more indepth information about indexes is availble via the Index class

* Bugfixes
  * fix nil exception when using a declared_data_type on primary key column that
    has no declared_data_type
  * when Database#transaction is passed a block, the return value is the return
    value of the block
  * nested transactions are 'faked'.  Calling Database#transaction while
    Databased#in_transaction? is true does not result in an exception, but
    continues on in the current transaction.  

== Version 0.2.4 2008-07-13

* Bugfixes
  * fix compilation when ruby is compiled without pthreads using 

== Version 0.2.3 2008-07-12

* Bugfixes
  * make sure file permissions are all read before shipping gem

== Version 0.2.2 2008-07-12

* Bugfixes
  * Database#pragma should accept a block just like Database#execute does

* compatibility fix
  * convert to using extconf.rb instead of mkrf to enable compilation as a
    direct ruby extension in the ruby source tree

== Version 0.2.1 - 2008-07-05

* Bugfixes
  * make sure that the pthread support in sqlite3 matches that of ruby
  * fix schema reloading in the example scripts

== Version 0.2.0 - 2008-07-04

* Major Enhancements
  * blob support, both incremental access and normal access

* Minor Enhancements
  * added examples/gem_db.rb script demonstrating taps and prepared statements
  * added examples/schema-info.rb script demonstrating meta information
  * added examples/blob.rb demonstrating incremental blob IO
  * added acces to the SQLite3 errcode and errmsg api
  
* Bugfixes
  * added taps.rb for requiring
  * fixed prepared statement reset
  * caught an error in executing prepared statements earlier in the process so
    the correct error is reported

== Version 0.1.0 - 2008-06-21

* Initial public release