@@ -3,6 +3,12 @@
 # All rights reserved.  See LICENSE and/or COPYING for details.
 #++
 
+# check if sqlite3 has already been required.  Amalgalite conflicts with system
+# level sqlite3 libraries.
+unless $LOADED_FEATURES.grep( /sqlite3/ ).empty? then
+  raise LoadError, "amalgalite conflicts with sqlite3-ruby, please choose one or the other."
+end
+
 module Amalgalite
   # 
   # Base class of all errors in Amalgalite
