@@ -19,6 +19,8 @@
   * nested transactions are 'faked'.  Calling Database#transaction while
     Databased#in_transaction? is true does not result in an exception, but
     continues on in the current transaction.  
+  * raise LoadError if required in the same program as sqlite3-ruby.  These gems
+    conflict with each other.
 
 == Version 0.2.4 2008-07-13
 
